// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row renders a row 1`] = `
<tr
  className="worklist-data-grid-row"
  style={
    Object {
      "height": "25",
    }
  }
>
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "Heart Rate Monitored (bpm)",
      }
    }
    columnId="Column-0"
    coordinates={
      Object {
        "col": 0,
        "row": 99,
      }
    }
    isRowHeader={true}
    isSelected={false}
    isTabStop={false}
    key="1_Column-0"
    onCellSelect={[Function]}
    rowId="1"
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "",
      }
    }
    columnId="Column-1"
    coordinates={
      Object {
        "col": 1,
        "row": 99,
      }
    }
    isRowHeader={false}
    isSelected={true}
    isTabStop={true}
    key="1_Column-1"
    onCellSelect={[Function]}
    rowId="1"
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "66",
        "isMasked": true,
      }
    }
    columnId="Column-2"
    coordinates={
      Object {
        "col": 2,
        "row": 99,
      }
    }
    isRowHeader={false}
    isSelected={false}
    isTabStop={false}
    key="1_Column-2"
    onCellSelect={[Function]}
    rowId="1"
  />
</tr>
`;

exports[`Row verifies the cell is created with the right props 1`] = `
<tr
  className="worklist-data-grid-row"
  style={
    Object {
      "height": "25",
    }
  }
>
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "Cardiac Index (L/min/m2)",
      }
    }
    columnId="Column-0"
    coordinates={
      Object {
        "col": 0,
        "row": 2,
      }
    }
    isRowHeader={true}
    isSelected={false}
    isTabStop={false}
    key="3_Column-0"
    onCellSelect={[Function]}
    rowId="3"
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "2.25",
      }
    }
    columnId="Column-1"
    coordinates={
      Object {
        "col": 1,
        "row": 2,
      }
    }
    isRowHeader={false}
    isSelected={false}
    isTabStop={false}
    key="3_Column-1"
    onCellSelect={[Function]}
    rowId="3"
  />
  <InjectIntl(Cell)
    cell={
      Object {
        "content": "2.28",
        "isMasked": true,
      }
    }
    columnId="Column-2"
    coordinates={
      Object {
        "col": 2,
        "row": 2,
      }
    }
    isRowHeader={false}
    isSelected={false}
    isTabStop={false}
    key="3_Column-2"
    onCellSelect={[Function]}
    rowId="3"
  />
</tr>
`;
